--- a/ios-clientes/Base.lproj/Main.storyboard
+++ b/ios-clientes/Base.lproj/Main.storyboard
@@ -58,14 +58,14 @@
         <!--Productos View Controller - Productos-->
         <scene sceneID="QgW-b7-480">
             <objects>
-                <tableViewController id="KiP-vD-Lam" customClass="BVProductosViewController" sceneMemberID="viewController">
+                <tableViewController extendedLayoutIncludesOpaqueBars="YES" id="KiP-vD-Lam" customClass="BVProductosViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="9hd-pt-Wog">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProductoCell" textLabel="S6i-Rx-3jM" detailTextLabel="wIx-vW-uLR" rowHeight="65" style="IBUITableViewCellStyleSubtitle" id="ATO-Pa-Mg9">
-                                <rect key="frame" x="0.0" y="22" width="320" height="65"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="64"/>
@@ -92,7 +92,6 @@
                         </prototypes>
                         <sections/>
                     </tableView>
-                    <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" title="Productos" id="cJQ-jY-1q3"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BTh-BA-B3Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
