--- a/ios-clientes/Base.lproj/Main.storyboard
+++ b/ios-clientes/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
             </objects>
             <point key="canvasLocation" x="-11" y="70"/>
         </scene>
-        <!--Perfil View Controller - Perfil-->
+        <!--Perfil View Controller - Configuración-->
         <scene sceneID="sXN-3i-91u">
             <objects>
                 <tableViewController extendedLayoutIncludesOpaqueBars="YES" clearsSelectionOnViewWillAppear="NO" id="xra-JF-M0c" customClass="BVPerfilViewController" sceneMemberID="viewController">
@@ -265,7 +265,7 @@
                             <outlet property="delegate" destination="xra-JF-M0c" id="03r-dW-NBT"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Perfil" image="perfilIcon" id="XUu-4D-QNj"/>
+                    <tabBarItem key="tabBarItem" title="Configuración" image="perfilIcon" id="XUu-4D-QNj"/>
                     <connections>
                         <outlet property="cellApellido" destination="Zfr-gN-aoS" id="YaW-d3-i70"/>
                         <outlet property="cellCelular" destination="ltl-bW-g0T" id="LMA-lM-1xy"/>
@@ -323,7 +323,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <items>
                                 <navigationItem title="Editar" id="bxY-d3-vBN">
-                                    <barButtonItem key="leftBarButtonItem" title="Cancelar" id="3ql-De-Rus">
+                                    <barButtonItem key="leftBarButtonItem" title="Volver" id="3ql-De-Rus">
                                         <connections>
                                             <segue destination="8R0-gS-wWK" kind="unwind" unwindAction="unwindToViewControllerProductosCancelar:" id="bMg-Vz-rSl"/>
                                         </connections>
@@ -446,11 +446,11 @@
             </objects>
             <point key="canvasLocation" x="599" y="75"/>
         </scene>
-        <!--Tab Bar Controller - Bice Vida-->
+        <!--Tab Bar Controller-->
         <scene sceneID="ZdB-We-q8A">
             <objects>
                 <tabBarController extendedLayoutIncludesOpaqueBars="YES" definesPresentationContext="YES" id="n6v-Qd-uvd" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Bice Vida" id="Tda-9I-12d"/>
+                    <navigationItem key="navigationItem" id="Tda-9I-12d"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="KNC-zr-7yJ">
