--- a/ios-clientes/Base.lproj/Main.storyboard
+++ b/ios-clientes/Base.lproj/Main.storyboard
@@ -280,35 +280,36 @@
             </objects>
             <point key="canvasLocation" x="599" y="739"/>
         </scene>
-        <!--Table View Controller - Sucursales-->
-        <scene sceneID="oYm-Cn-Z1S">
+        <!--Sucursales View Controller - Sucursales-->
+        <scene sceneID="fVX-T8-1VB">
             <objects>
-                <tableViewController extendedLayoutIncludesOpaqueBars="YES" id="The-dU-IpQ" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ieq-gE-hdW">
+                <viewController extendedLayoutIncludesOpaqueBars="YES" id="5CM-6c-JYm" customClass="BVSucursalesViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xlt-Ss-kFH">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="JOI-SM-6bq">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="The-dU-IpQ" id="ADk-df-GR7"/>
-                            <outlet property="delegate" destination="The-dU-IpQ" id="GzD-cu-ouk"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="Sucursales" image="sucursalesIcon" id="jxB-l0-IOH"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bez-bA-1hs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="LJY-Bs-fWp">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="LJY-Bs-fWp" firstAttribute="top" secondItem="xlt-Ss-kFH" secondAttribute="top" id="AIZ-Qq-flm"/>
+                            <constraint firstItem="LJY-Bs-fWp" firstAttribute="leading" secondItem="xlt-Ss-kFH" secondAttribute="leading" id="QhA-pZ-g10"/>
+                            <constraint firstItem="LJY-Bs-fWp" firstAttribute="bottom" secondItem="xlt-Ss-kFH" secondAttribute="bottom" id="RpN-0Y-8kW"/>
+                            <constraint firstItem="LJY-Bs-fWp" firstAttribute="trailing" secondItem="xlt-Ss-kFH" secondAttribute="trailing" id="inp-eH-aoK"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Sucursales" image="sucursalesIcon" id="NM6-yA-9dw"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="mapa" destination="LJY-Bs-fWp" id="yDa-Fh-pKW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wH3-di-NH4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="599" y="1334"/>
+            <point key="canvasLocation" x="599" y="1364"/>
         </scene>
         <!--Editar Perfil View Controller-->
         <scene sceneID="IZl-F9-XYF">
@@ -462,7 +463,7 @@
                         <segue destination="yBV-r1-hqp" kind="relationship" relationship="viewControllers" id="pWK-IR-7in"/>
                         <segue destination="xra-JF-M0c" kind="relationship" relationship="viewControllers" id="7kB-D0-yae"/>
                         <segue destination="PKd-vx-NeB" kind="relationship" relationship="viewControllers" id="ZdD-QD-jd9"/>
-                        <segue destination="The-dU-IpQ" kind="relationship" relationship="viewControllers" id="qyj-Ts-yJL"/>
+                        <segue destination="5CM-6c-JYm" kind="relationship" relationship="viewControllers" id="v9l-3B-hDe"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AqP-Pt-JDx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -494,65 +495,6 @@
         <image name="productosIcon" width="32" height="32"/>
         <image name="sucursalesIcon" width="32" height="32"/>
     </resources>
-    <classes>
-        <class className="BVEditarPerfilViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVEditarPerfilViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="hideKeyboard"/>
-                <relationship kind="outlet" name="cellParametro" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellValor" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="labelParametro" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="textFieldValor" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="BVLoginViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVLoginViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="buttonEntrar:"/>
-                <relationship kind="action" name="hideOneKeyboard:"/>
-                <relationship kind="outlet" name="activeField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="entrar" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="loading" candidateClass="UIActivityIndicatorView"/>
-                <relationship kind="outlet" name="password" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="scrollViewContenedor" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="usuario" candidateClass="BVRutTextField"/>
-            </relationships>
-        </class>
-        <class className="BVPerfilViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVPerfilViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="unwindToViewControllerProductosCancelar:" candidateClass="UIStoryboardSegue"/>
-                <relationship kind="action" name="unwindToViewControllerProductosGuardar:" candidateClass="UIStoryboardSegue"/>
-                <relationship kind="outlet" name="cellApellido" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellCelular" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellComuna" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellDireccion" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellEmail" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellNombre" candidateClass="UITableViewCell"/>
-                <relationship kind="outlet" name="cellRut" candidateClass="UITableViewCell"/>
-            </relationships>
-        </class>
-        <class className="BVProductosViewController" superclassName="CoreDataTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVProductosViewController.h"/>
-        </class>
-        <class className="BVRutTextField" superclassName="UITextField">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BVRutTextField.h"/>
-            <relationships>
-                <relationship kind="action" name="editBegin:"/>
-                <relationship kind="action" name="editChangeEnd:"/>
-                <relationship kind="action" name="editDidEnd:"/>
-            </relationships>
-        </class>
-        <class className="CoreDataTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CoreDataTableViewController.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="UIStoryboardSegue" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
